# finance-tracker

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/src/: main.py
backend/src/auth/: token_router.py  utils.py
backend/src/auth/actions/: authenticate_user.py  create_access_token.py  get_current_user.py
backend/src/config/: auth_settings.py
backend/src/database/: config.py  env.py
backend/src/database/versions/: 6c74f6589f1b_migration.py  ae561f035398_transaction_table.py  ff7af585ee8c_user_table_and_relation_with_.py
backend/src/models/: transaction.py  user.py
backend/src/routes/: auth_router.py  transaction_router.py  transaction_routes.py
backend/src/schemas/: auth_schemas.py  errors.py  transaction_schemas.py  user_schemas.py
backend/src/services/: auth_service.py  transaction_service.py
backend/src/utils/: filter_transactions.py  summarize_transactions.py  validate_current_user.py
backend/tests/: api_setup.py  serialize_payload.py  test_main.py
backend/tests/models/: test_transaction.py  test_user.py
backend/tests/routes/transaction_router/: test_add_transaction_endpoint.py  test_get_transaction_by_id_endpoint.py  test_get_transactions.py
backend/tests/services/: test_transaction_service.py
backend/tests/services/transaction_service/: test_add_transaction.py  test_delete_all_transactions_by_user_id.py  test_delete_transaction_by_id.py  test_get_transaction_by_id.py  test_get_transactions_by_category.py  test_get_transactions_by_user_id.py  test_get_transactions_in_date_range.py  (+3 more)
backend/tests/utils/: test_filter_transactions.py
(+36 files in other folders)
