[project]
name = "backend"
version = "0.1.0"
description = "A personal finance management web application designed to help users track expenses, manage savings, and achieve financial goals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
