[project]
name = "personal-finance-tracker-backend"
version = "0.1.0"
description = "A personal finance management web application designed to help users track expenses, manage savings, and achieve financial goals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi-sqlalchemy>=0.2.1",
    "fastapi[standard]>=0.115.5",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "python-jose[cryptography]>=3.3.0",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
